core/grammar/prism_templateParser.py
# Generated from prism_template.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class prism_templateParser ( Parser ):

    grammarFileName = "prism_template.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'@'", "'A'", "'bool'", "'clock'", "'const'", 
                     "'ctmc'", "'C'", "'double'", "'dtmc'", "'E'", "'endinit'", 
                     "'endinvariant'", "'endmodule'", "'endrewards'", "'endsystem'", 
                     "'false'", "'formula'", "'filter'", "'func'", "'F'", 
                     "'global'", "'G'", "'init'", "'invariant'", "'I'", 
                     "'int'", "'label'", "'max'", "'mdp'", "'min'", "'module'", 
                     "'X'", "'nondeterministic'", "'Pmax'", "'Pmin'", "'P'", 
                     "'probabilistic'", "'prob'", "'pta'", "'rate'", "'rewards'", 
                     "'Rmax'", "'Rmin'", "'R'", "'S'", "'stochastic'", "'system'", 
                     "'true'", "'U'", "'W'", "'!'", "'&'", "'|'", "'=>'", 
                     "'<=>'", "'->'", "':'", "';'", "','", "'..'", "'('", 
                     "')'", "'['", "']'", "'[['", "']]'", "'{'", "'}'", 
                     "'='", "'!='", "'<'", "'>'", "'<<'", "'>>'", "'<='", 
                     "'>='", "'+'", "'-'", "'*'", "'/'", "'''", "'<-'", 
                     "'?'", "'\\\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "A", "BOOL", "CLOCK", "CONST", 
                      "CTMC", "C", "DOUBLE", "DTMC", "E", "ENDINIT", "ENDINVARIANT", 
                      "ENDMODULE", "ENDREWARDS", "ENDSYSTEM", "FALSE", "FORMULA", 
                      "FILTER", "FUNC", "F", "GLOBAL", "G", "INIT", "INVARIANT", 
                      "I", "INT", "LABEL", "MAX", "MDP", "MIN", "MODULE", 
                      "X", "NONDETERMINISTIC", "PMAX", "PMIN", "P", "PROBABILISTIC", 
                      "PROB", "PTA", "RATE", "REWARDS", "RMAX", "RMIN", 
                      "R", "S", "STOCHASTIC", "SYSTEM", "TRUE", "U", "W", 
                      "NOT", "AND", "OR", "IMPLIES", "IFF", "RARROW", "COLON", 
                      "SEMICOLON", "COMMA", "DOTS", "LPARENTH", "RPARENTH", 
                      "LBRACKET", "RBRACKET", "DLBRACKET", "DRBRACKET", 
                      "LBRACE", "RBRACE", "EQ", "NE", "LT", "GT", "DLT", 
                      "DGT", "LE", "GE", "PLUS", "MINUS", "TIMES", "DIVIDE", 
                      "PRIME", "RENAME", "QMARK", "DQUOTE", "REG_INT", "REG_DOUBLE", 
                      "REG_IDENTPRIME", "REG_IDENT", "PREPROC", "WS", "Block_comment", 
                      "Line_comment" ]

    RULE_expression = 0
    RULE_program = 1
    RULE_statements = 2
    RULE_model_type = 3
    RULE_common_declarations = 4
    RULE_common_declaration = 5
    RULE_constant_declaration = 6
    RULE_formula_declaration = 7
    RULE_label_declaration = 8
    RULE_global_declaration = 9
    RULE_init_declaration = 10
    RULE_module_declarations = 11
    RULE_module_content = 12
    RULE_module_rename = 13
    RULE_id_assign = 14
    RULE_id_assign_block = 15
    RULE_module_desc = 16
    RULE_var_declarations = 17
    RULE_var_declaration = 18
    RULE_range_declaration = 19
    RULE_guard_declarations = 20
    RULE_guard_declaration = 21
    RULE_guard_updates = 22
    RULE_guard_update = 23
    RULE_state_update = 24
    RULE_replacement = 25

    ruleNames =  [ "expression", "program", "statements", "model_type", 
                   "common_declarations", "common_declaration", "constant_declaration", 
                   "formula_declaration", "label_declaration", "global_declaration", 
                   "init_declaration", "module_declarations", "module_content", 
                   "module_rename", "id_assign", "id_assign_block", "module_desc", 
                   "var_declarations", "var_declaration", "range_declaration", 
                   "guard_declarations", "guard_declaration", "guard_updates", 
                   "guard_update", "state_update", "replacement" ]

    EOF = Token.EOF
    T__0=1
    A=2
    BOOL=3
    CLOCK=4
    CONST=5
    CTMC=6
    C=7
    DOUBLE=8
    DTMC=9
    E=10
    ENDINIT=11
    ENDINVARIANT=12
    ENDMODULE=13
    ENDREWARDS=14
    ENDSYSTEM=15
    FALSE=16
    FORMULA=17
    FILTER=18
    FUNC=19
    F=20
    GLOBAL=21
    G=22
    INIT=23
    INVARIANT=24
    I=25
    INT=26
    LABEL=27
    MAX=28
    MDP=29
    MIN=30
    MODULE=31
    X=32
    NONDETERMINISTIC=33
    PMAX=34
    PMIN=35
    P=36
    PROBABILISTIC=37
    PROB=38
    PTA=39
    RATE=40
    REWARDS=41
    RMAX=42
    RMIN=43
    R=44
    S=45
    STOCHASTIC=46
    SYSTEM=47
    TRUE=48
    U=49
    W=50
    NOT=51
    AND=52
    OR=53
    IMPLIES=54
    IFF=55
    RARROW=56
    COLON=57
    SEMICOLON=58
    COMMA=59
    DOTS=60
    LPARENTH=61
    RPARENTH=62
    LBRACKET=63
    RBRACKET=64
    DLBRACKET=65
    DRBRACKET=66
    LBRACE=67
    RBRACE=68
    EQ=69
    NE=70
    LT=71
    GT=72
    DLT=73
    DGT=74
    LE=75
    GE=76
    PLUS=77
    MINUS=78
    TIMES=79
    DIVIDE=80
    PRIME=81
    RENAME=82
    QMARK=83
    DQUOTE=84
    REG_INT=85
    REG_DOUBLE=86
    REG_IDENTPRIME=87
    REG_IDENT=88
    PREPROC=89
    WS=90
    Block_comment=91
    Line_comment=92

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LPARENTH(self):
            return self.getToken(prism_templateParser.LPARENTH, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(prism_templateParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(prism_templateParser.ExpressionContext,i)


        def RPARENTH(self):
            return self.getToken(prism_templateParser.RPARENTH, 0)

        def NOT(self):
            return self.getToken(prism_templateParser.NOT, 0)

        def MINUS(self):
            return self.getToken(prism_templateParser.MINUS, 0)

        def REG_IDENT(self):
            return self.getToken(prism_templateParser.REG_IDENT, 0)

        def REG_INT(self):
            return self.getToken(prism_templateParser.REG_INT, 0)

        def REG_DOUBLE(self):
            return self.getToken(prism_templateParser.REG_DOUBLE, 0)

        def TRUE(self):
            return self.getToken(prism_templateParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(prism_templateParser.FALSE, 0)

        def COLON(self):
            return self.getToken(prism_templateParser.COLON, 0)

        def IMPLIES(self):
            return self.getToken(prism_templateParser.IMPLIES, 0)

        def IFF(self):
            return self.getToken(prism_templateParser.IFF, 0)

        def OR(self):
            return self.getToken(prism_templateParser.OR, 0)

        def AND(self):
            return self.getToken(prism_templateParser.AND, 0)

        def EQ(self):
            return self.getToken(prism_templateParser.EQ, 0)

        def NE(self):
            return self.getToken(prism_templateParser.NE, 0)

        def LT(self):
            return self.getToken(prism_templateParser.LT, 0)

        def LE(self):
            return self.getToken(prism_templateParser.LE, 0)

        def GT(self):
            return self.getToken(prism_templateParser.GT, 0)

        def GE(self):
            return self.getToken(prism_templateParser.GE, 0)

        def PLUS(self):
            return self.getToken(prism_templateParser.PLUS, 0)

        def TIMES(self):
            return self.getToken(prism_templateParser.TIMES, 0)

        def DIVIDE(self):
            return self.getToken(prism_templateParser.DIVIDE, 0)

        def getRuleIndex(self):
            return prism_templateParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = prism_templateParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [prism_templateParser.LPARENTH]:
                self.state = 53
                self.match(prism_templateParser.LPARENTH)
                self.state = 54
                self.expression(0)
                self.state = 55
                self.match(prism_templateParser.RPARENTH)
                pass
            elif token in [prism_templateParser.NOT]:
                self.state = 57
                self.match(prism_templateParser.NOT)
                self.state = 58
                self.expression(17)
                pass
            elif token in [prism_templateParser.MINUS]:
                self.state = 59
                self.match(prism_templateParser.MINUS)
                self.state = 60
                self.expression(6)
                pass
            elif token in [prism_templateParser.REG_IDENT]:
                self.state = 61
                self.match(prism_templateParser.REG_IDENT)
                pass
            elif token in [prism_templateParser.REG_INT]:
                self.state = 62
                self.match(prism_templateParser.REG_INT)
                pass
            elif token in [prism_templateParser.REG_DOUBLE]:
                self.state = 63
                self.match(prism_templateParser.REG_DOUBLE)
                pass
            elif token in [prism_templateParser.TRUE]:
                self.state = 64
                self.match(prism_templateParser.TRUE)
                pass
            elif token in [prism_templateParser.FALSE]:
                self.state = 65
                self.match(prism_templateParser.FALSE)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 113
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 68
                        if not self.precpred(self._ctx, 22):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 22)")
                        self.state = 69
                        self.match(prism_templateParser.COLON)
                        self.state = 70
                        self.expression(23)
                        pass

                    elif la_ == 2:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 71
                        if not self.precpred(self._ctx, 21):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 21)")
                        self.state = 72
                        self.match(prism_templateParser.IMPLIES)
                        self.state = 73
                        self.expression(22)
                        pass

                    elif la_ == 3:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 74
                        if not self.precpred(self._ctx, 20):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 20)")
                        self.state = 75
                        self.match(prism_templateParser.IFF)
                        self.state = 76
                        self.expression(21)
                        pass

                    elif la_ == 4:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 77
                        if not self.precpred(self._ctx, 19):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 19)")
                        self.state = 78
                        self.match(prism_templateParser.OR)
                        self.state = 79
                        self.expression(20)
                        pass

                    elif la_ == 5:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 80
                        if not self.precpred(self._ctx, 18):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 18)")
                        self.state = 81
                        self.match(prism_templateParser.AND)
                        self.state = 82
                        self.expression(19)
                        pass

                    elif la_ == 6:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 83
                        if not self.precpred(self._ctx, 16):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 16)")
                        self.state = 84
                        self.match(prism_templateParser.EQ)
                        self.state = 85
                        self.expression(17)
                        pass

                    elif la_ == 7:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 86
                        if not self.precpred(self._ctx, 15):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 15)")
                        self.state = 87
                        self.match(prism_templateParser.NE)
                        self.state = 88
                        self.expression(16)
                        pass

                    elif la_ == 8:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 89
                        if not self.precpred(self._ctx, 14):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 14)")
                        self.state = 90
                        self.match(prism_templateParser.LT)
                        self.state = 91
                        self.expression(15)
                        pass

                    elif la_ == 9:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 92
                        if not self.precpred(self._ctx, 13):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 13)")
                        self.state = 93
                        self.match(prism_templateParser.LE)
                        self.state = 94
                        self.expression(14)
                        pass

                    elif la_ == 10:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 95
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 96
                        self.match(prism_templateParser.GT)
                        self.state = 97
                        self.expression(13)
                        pass

                    elif la_ == 11:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 98
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 99
                        self.match(prism_templateParser.GE)
                        self.state = 100
                        self.expression(12)
                        pass

                    elif la_ == 12:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 101
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 102
                        self.match(prism_templateParser.PLUS)
                        self.state = 103
                        self.expression(11)
                        pass

                    elif la_ == 13:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 104
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 105
                        self.match(prism_templateParser.MINUS)
                        self.state = 106
                        self.expression(10)
                        pass

                    elif la_ == 14:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 107
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 108
                        self.match(prism_templateParser.TIMES)
                        self.state = 109
                        self.expression(9)
                        pass

                    elif la_ == 15:
                        localctx = prism_templateParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 110
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 111
                        self.match(prism_templateParser.DIVIDE)
                        self.state = 112
                        self.expression(8)
                        pass

             
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(prism_templateParser.EOF, 0)

        def statements(self):
            return self.getTypedRuleContext(prism_templateParser.StatementsContext,0)


        def getRuleIndex(self):
            return prism_templateParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = prism_templateParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << prism_templateParser.CONST) | (1 << prism_templateParser.CTMC) | (1 << prism_templateParser.DTMC) | (1 << prism_templateParser.FORMULA) | (1 << prism_templateParser.GLOBAL) | (1 << prism_templateParser.LABEL) | (1 << prism_templateParser.MDP) | (1 << prism_templateParser.MODULE) | (1 << prism_templateParser.PTA))) != 0):
                self.state = 118
                self.statements()


            self.state = 121
            self.match(prism_templateParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declarations(self):
            return self.getTypedRuleContext(prism_templateParser.Module_declarationsContext,0)


        def model_type(self):
            return self.getTypedRuleContext(prism_templateParser.Model_typeContext,0)


        def common_declarations(self):
            return self.getTypedRuleContext(prism_templateParser.Common_declarationsContext,0)


        def init_declaration(self):
            return self.getTypedRuleContext(prism_templateParser.Init_declarationContext,0)


        def getRuleIndex(self):
            return prism_templateParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = prism_templateParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << prism_templateParser.CTMC) | (1 << prism_templateParser.DTMC) | (1 << prism_templateParser.MDP) | (1 << prism_templateParser.PTA))) != 0):
                self.state = 123
                self.model_type()


            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << prism_templateParser.CONST) | (1 << prism_templateParser.FORMULA) | (1 << prism_templateParser.GLOBAL) | (1 << prism_templateParser.LABEL))) != 0):
                self.state = 126
                self.common_declarations()


            self.state = 129
            self.module_declarations()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==prism_templateParser.INIT:
                self.state = 130
                self.init_declaration()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Model_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DTMC(self):
            return self.getToken(prism_templateParser.DTMC, 0)

        def CTMC(self):
            return self.getToken(prism_templateParser.CTMC, 0)

        def MDP(self):
            return self.getToken(prism_templateParser.MDP, 0)

        def PTA(self):
            return self.getToken(prism_templateParser.PTA, 0)

        def getRuleIndex(self):
            return prism_templateParser.RULE_model_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel_type" ):
                listener.enterModel_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel_type" ):
                listener.exitModel_type(self)




    def model_type(self):

        localctx = prism_templateParser.Model_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_model_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << prism_templateParser.CTMC) | (1 << prism_templateParser.DTMC) | (1 << prism_templateParser.MDP) | (1 << prism_templateParser.PTA))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Common_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def common_declaration(self):
            return self.getTypedRuleContext(prism_templateParser.Common_declarationContext,0)


        def common_declarations(self):
            return self.getTypedRuleContext(prism_templateParser.Common_declarationsContext,0)


        def getRuleIndex(self):
            return prism_templateParser.RULE_common_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommon_declarations" ):
                listener.enterCommon_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommon_declarations" ):
                listener.exitCommon_declarations(self)




    def common_declarations(self):

        localctx = prism_templateParser.Common_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_common_declarations)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.common_declaration()
            self.state = 136
            self.common_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Common_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_declaration(self):
            return self.getTypedRuleContext(prism_templateParser.Global_declarationContext,0)


        def constant_declaration(self):
            return self.getTypedRuleContext(prism_templateParser.Constant_declarationContext,0)


        def formula_declaration(self):
            return self.getTypedRuleContext(prism_templateParser.Formula_declarationContext,0)


        def label_declaration(self):
            return self.getTypedRuleContext(prism_templateParser.Label_declarationContext,0)


        def getRuleIndex(self):
            return prism_templateParser.RULE_common_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommon_declaration" ):
                listener.enterCommon_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommon_declaration" ):
                listener.exitCommon_declaration(self)




    def common_declaration(self):

        localctx = prism_templateParser.Common_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_common_declaration)
        try:
            self.state = 142
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [prism_templateParser.GLOBAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.global_declaration()
                pass
            elif token in [prism_templateParser.CONST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.constant_declaration()
                pass
            elif token in [prism_templateParser.FORMULA]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.formula_declaration()
                pass
            elif token in [prism_templateParser.LABEL]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.label_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Constant_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(prism_templateParser.CONST, 0)

        def REG_IDENT(self):
            return self.getToken(prism_templateParser.REG_IDENT, 0)

        def EQ(self):
            return self.getToken(prism_templateParser.EQ, 0)

        def SEMICOLON(self):
            return self.getToken(prism_templateParser.SEMICOLON, 0)

        def INT(self):
            return self.getToken(prism_templateParser.INT, 0)

        def DOUBLE(self):
            return self.getToken(prism_templateParser.DOUBLE, 0)

        def BOOL(self):
            return self.getToken(prism_templateParser.BOOL, 0)

        def expression(self):
            return self.getTypedRuleContext(prism_templateParser.ExpressionContext,0)


        def replacement(self):
            return self.getTypedRuleContext(prism_templateParser.ReplacementContext,0)


        def getRuleIndex(self):
            return prism_templateParser.RULE_constant_declaration
